--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "resend": "^6.0.3",
     "zod": "^4.1.7"
   },
   "devDependencies": {
