--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-email/components": "^0.5.3",
     "mongoose": "^8.18.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-email": "^4.2.11",
     "resend": "^6.0.3",
     "zod": "^4.1.7"
   },
