--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.17",
+    "@ai-sdk/openai": "^2.0.38",
+    "@ai-sdk/react": "^2.0.56",
     "@react-email/components": "^0.5.3",
     "@react-email/render": "^1.3.0",
+    "ai": "^5.0.56",
     "bcryptjs": "^3.0.2",
     "mongoose": "^8.18.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
+    "openai": "^5.23.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-email": "^4.2.11",
     "resend": "^6.0.3",
-    "zod": "^4.1.7"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
