--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@react-email/render": "^1.3.0",
     "ai": "^5.0.56",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.544.0",
     "mongoose": "^8.18.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
@@ -24,6 +27,7 @@
     "react-dom": "19.1.0",
     "react-email": "^4.2.11",
     "resend": "^6.0.3",
+    "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11"
   },
   "devDependencies": {
