--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@ai-sdk/google": "^2.0.17",
     "@ai-sdk/openai": "^2.0.38",
     "@ai-sdk/react": "^2.0.56",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-email/components": "^0.5.3",
     "@react-email/render": "^1.3.0",
     "ai": "^5.0.56",
@@ -26,6 +29,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-email": "^4.2.11",
+    "react-hook-form": "^7.63.0",
     "resend": "^6.0.3",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11"
