--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.17",
-    "@ai-sdk/openai": "^2.0.38",
     "@ai-sdk/react": "^2.0.56",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-label": "^2.1.7",
@@ -18,6 +17,7 @@
     "@react-email/components": "^0.5.3",
     "@react-email/render": "^1.3.0",
     "ai": "^5.0.56",
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -25,13 +25,15 @@
     "mongoose": "^8.18.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
-    "openai": "^5.23.1",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-email": "^4.2.11",
     "react-hook-form": "^7.63.0",
     "resend": "^6.0.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "usehooks-ts": "^3.1.1",
     "zod": "^4.1.11"
   },
   "devDependencies": {
